--- a/education.html
+++ b/education.html
@@ -67,7 +67,7 @@
         
         <h2>الأبجدية العربية بلغة الإشارة</h2>
         <p>تعلم كيفية التعبير عن الأحرف الأبجدية العربية باستخدام لغة الإشارة.</p>
-        <iframe width="100%" height="315" src="https://www.youtube.com/embed/YOUR_VIDEO_ID" frameborder="0" allowfullscreen></iframe>
+        <iframe width="100%" height="315" src="https://www.youtube.com/embed/T0_7OVYvR0E" frameborder="0" allowfullscreen></iframe>
     </div>
     
     <div class="nav-links">
@@ -75,4 +75,3 @@
     </div>
 </body>
 </html>
-
